--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Add Google Roboto font for Material UI
     -->
     <title>React App</title>
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
